--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "busboy": "^1.6.0",
     "cors": "^2.8.5",
+    "dicer": "^0.3.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "gridfs-stream": "^1.1.1",
@@ -22,7 +24,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.4",
-    "multer-gridfs-storage": "^1.3.0"
+    "multer": "^1.4.4-lts.1",
+    "multer-gridfs-storage": "^5.0.2"
   }
 }
